--- a/CloudGateway/src/main/resources/application.yml
+++ b/CloudGateway/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 spring:
   application:
     name: CloudGateway
+  security:
+    user:
+      name: demo
+      password: demo
   cloud:
     gateway:
       routes:
